--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "construtiva",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/logo.png",
+    "icon": "",
     "scheme": "construtiva",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -12,36 +12,28 @@
       "supportsTablet": true
     },
     "android": {
-      "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
-      },
+      
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.carollqs.construtiva"
     },
     "web": {
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
+     
     },
     "plugins": [
       [
         "expo-splash-screen",
-        {
-          "image": "./assets/images/logo.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
-          "dark": {
-            "backgroundColor": "#000000"
-          }
-        }
+        {}
       ]
     ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "eas": {
+        "projectId": "ee5d5921-9513-4c94-ac70-9453cfa1f888"
+      }
     }
   }
 }
